# pabardb

./: .gitignore  LICENSE  README.md  build.sh  create.sh  install.sh  pabardb.sh
.github/workflows/: publish-pypi.yml  release.yml
docs/: 00-getting-started.md
engine/: CMakeLists.txt
engine/c_api/: pabardb_c.cpp
engine/cli/: main.cpp
engine/core/: engine.cpp  engine.h
engine/include/: pabardb.h
engine/storage/: wal.cpp  wal.h
installer/macos/: build-dmg.sh
installer/macos/dmg/: pabardb
python-package/.github/workflows/: publish-pypi.yml
